jumbler-app-k8s/k8s/jumbler-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jumbler-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: frontend
  ports:
    - port: 3000
      targetPort: 80
